# nxquartz

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
cmake/: FindLIBNX.cmake  SwitchTools.cmake
include/: account.hpp  logger.hpp  profile.hpp  title.hpp  util.hpp
include/hos/: common.hpp
include/state/: account_state.hpp  app_state.hpp  profile_state.hpp  state.hpp
include/ui/: MainApplication.hpp  about_tab.hpp  account_tab.hpp  main_activity.hpp
include/ui/components/: bar.hpp
include/ui/layout/: BaseLayout.hpp  MainMenu.hpp
resources/i18n/en-US/: brls.json  lang.xml  main.json
resources/xml/activity/: main.xml
source/: account.cpp  main.cpp
source/hos/: common.cpp
source/state/: account_state.cpp
source/ui/: MainApplication.cpp  about_tab.cpp  account_tab.cpp
source/ui/components/: bar.cpp
source/ui/layout/: MainMenu.cpp
src/: logger.cpp  main.cpp  profile.cpp
src/state/: profile_state.cpp
src/ui/: about_tab.cpp  account_tab.cpp
src/ui/components/: bar.cpp
